# TDD_info

GoogleTestProject/: CMakeLists.txt  main.cpp
TEST/: CMakeLists.txt  LibraryCode.cpp  main.cpp
